# wasm-module-with-rust

./: index.html  main.js
rust-lib/: Cargo.toml
